Dungeon: Level Editor v2 (#2611)
In diesem PR:
- Level Editor v2
  - Einschalten mit F4
- Wenn eingeschaltet, überschreibt einige normale Callbacks vom Helden,
die auf den gleichen Buttons/Keys laufen wie Sachen im LevelEditor.
Setzt die Callbacks zurück beim Ausschalten.
  - 7 Modi:
    1. Tiles: Setzen von Tiles mit LMB, RMB und X (löschen), Brush Size
2. Decos: Setzten, Verschieben, Löschen von Decorations,
OnGrid/QuarterGrid/OffGrid, Preview von gewählter Deco unterm Cursor
    3. Points: Setzen, Verschieben, Löschen von NamedPoints
    4. Level Bounds: Level layout größer/kleiner machen
5. Shift Level: Ganzes Level nach links/rechts/oben/unten verschieben
    6. Start Tiles: Startpositionen setzen, Verschieben, Löschen
    7. Level Speichern
- ILevel: startTile -> Liste von startTiles(), wobei startTile() das
erste Element zurückgibt
- GameLoop: Am Ende vom Laden eines neuen Levels werden alle Decoration
Entities erstellt und im Level platziert.

<img width="1920" height="1016" alt="image"
src="https://github.com/user-attachments/assets/6889266d-75bc-4286-8926-9ac0703e08ca"
/>